# mc-extension

./: .gitignore  README.md
gamelord/: Cargo.toml  metadata.json
gamelord/api/: gamelord:template.os-v0.wit
gamelord/gamelord/: Cargo.toml
gamelord/gamelord/src/: fixtures.rs  gamelord_types.rs  lib.rs  utilities.rs
gamelord/pkg/: manifest.json  scripts.json
gamelord/pkg/ui/: index.html
gamelord/send/src/: lib.rs
gamelord/test/: tests.toml
gamelord/test/gamelord_test/: Cargo.toml  metadata.json
gamelord/test/gamelord_test/api/: gamelord_test:template.os-v0.wit
gamelord/test/gamelord_test/gamelord_test/: Cargo.toml
gamelord/test/gamelord_test/gamelord_test/src/: lib.rs
gamelord/test/gamelord_test/pkg/: manifest.json
mc-plugin/: .gitignore  README.md  plugin.yml  pom.xml
mc-plugin/src/main/java/org/kinode/: EmptyClient.java  MCKinodePlugin.java  MCKinodeWS.java  Mojang.java  MojangAPI.java  PluginInstance.java  WorldInfo.java
mc-plugin/src/main/java/org/kinode/managers/: ConfigMgr.java  Manager.java  PluginMgr.java
mc-plugin/src/main/java/org/kinode/misc/: Items.java
mc-plugin/src/main/resources/: plugin.yml
mcdriver/: metadata.json
mcdriver/mcdriver/: Cargo.toml
mcdriver/mcdriver/src/: lib.rs  mc_types.rs
mcdriver/pkg/: manifest.json  metadata.json
ui/: README.md  index.html  main.js  package-lock.json
